# youtube-dl-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-ytdlp  Dockerfile.arm32v7  Jenkinsfile  LICENSE  Makefile  README.md  SECURITY.md  bootstrap.sh  config.yml  docker_run.sh  index.html  jobshandler.py  logs.html  pip.conf  pyproject.toml  renovate.json  requirements-yt-dlp.txt  requirements.txt  youtube-dl-server.py  youtube-dl.conf  youtube_dl_logdb.py
.github/: dependabot.yml
.github/workflows/: docker-arm.yml  docker-buildx.yml  docker-image.yml  docker-images.yml
app/: youtube-dl-server.py
firefox/: send_to_youtube_dl-0.1-an+fx.xpi
front/: index.html  package-lock.json  package.json  vite.config.js
front/src/: App.vue  main.js  utils.js
front/src/assets/: style.css
front/src/components/: DownloadForm.vue  FileTreeItem.vue  Finished.vue  Footer.vue  Header.vue  Home.vue  Logs.vue  QuickDownloadModal.vue  SvgIcon.vue
hooks/: build  post_push
root/: healthcheck.sh
root/app/: auth.py  youtube-dl-server.py
root/app/resources/: ydl.py
root/etc/cont-init.d/: 30-permission  40-youtube-dl-update
root/usr/src/app/: index.html  (+1 more)
scripts/: download.py
static/: style.css
static/css/: style.css
static/js/: youtubedl.js
templates/: index.html  logs.html
views/: index.tpl  processing.tpl
ydl_server/: config.py  db.py  jobshandler.py  logdb.py  routes.py  views.py  ydlhandler.py
ydl_server/static/css/: style.css
ydl_server/templates/: finished.html  footer.html  header.html  index.html  logs.html
(+6 files in other folders)
